--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ button {
   content: '';
   width: calc(100% - 60px);
   height: 7px;
-  background-color: #fcee21;
+  background-color: #272720;
   position: absolute;
   top: -10px;
   left: 30px;
@@ -239,7 +239,7 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #39b54a;
+  background-color: #d6d1d1;
 }
 
 .bg-color--subcolor {
@@ -284,7 +284,7 @@ button {
 }
 
 .section-title--keycolorlight {
-  background-color: #8cc63f;
+  background-color: #ad2b2bb6;
 }
 
 .section-title--keycolorlight .section-title__stage {
@@ -336,7 +336,7 @@ button {
   display: block;
   text-decoration: none;
   cursor: pointer;
-  background-color: #006837;
+  background-color: #8b2c2cbe;
   color: #fff;
   font-size: 24px;
   line-height: 1.54167;
