--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ button {
           transform: rotate(90deg);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  fill: #009245;
+  fill: #ffffff;
   width: 12px;
   height: 24px;
 }
@@ -243,7 +243,7 @@ button {
 }
 
 .bg-color--subcolor {
-  background-color: #d9e021;
+  background-color: #ad2b2bb6;
 }
 
 .bg-color--gray {
@@ -307,7 +307,7 @@ button {
   line-height: 1.06667;
   margin: 0;
   padding-bottom: 15px;
-  color: #006837;
+  color: #ffffff;
 }
 
 .section-title--border::after {
@@ -316,7 +316,7 @@ button {
   left: calc(50% - 95px);
   display: block;
   content: '';
-  background-color: rgb(150, 54, 54);
+  background-color: rgb(255, 255, 255);
   height: 2.6px;
   width: 190px;
 }
@@ -453,7 +453,7 @@ button {
 }
 
 .clear-message {
-  background-color: #d9e021;
+  background-color: #f8f8f8;
   padding: 30px 30px 60px;
   position: relative;
 }
@@ -474,7 +474,7 @@ button {
   display: block;
   width: 183px;
   height: 2px;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   bottom: 0;
   left: calc(50% - (183px/2));
 }
