--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ button {
           transform: rotate(90deg);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  fill: #ffffff;
+  fill: #d48b8b;
   width: 12px;
   height: 24px;
 }
