--- a/assets/css/open.css
+++ b/assets/css/open.css
@@ -5,10 +5,10 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: #333;
+  background: rgb(12, 12, 12);
   z-index: 9999999;
   text-align:center;
-  color:#fff;
+  color:rgb(25, 0, 85);
 }
 
 #splash-logo {
@@ -22,11 +22,11 @@
 /*========= 画面遷移のためのCSS ===============*/
 
 body{
-    background:#333;/*遷移アニメーションと同じ色を指定*/
+    background:rgb(47, 45, 70);/*遷移アニメーションと同じ色を指定*/
 }
 
 body.appear{
-    background:#fff;/*画面を開いた後の背景色を指定*/
+    background:rgb(0, 0, 0);/*画面を開いた後の背景色を指定*/
 }
 
 /*画面遷移アニメーション*/
