--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,14 @@ html {
 
 body {
   overflow-x: hidden;
-  font-family: "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
+  font-family: Serif ;
   font-size: 18px;
   line-height: 1.77778;
   font-weight: bold;
   text-decoration: none;
   border: none;
   list-style: none;
-  color: #000;
+  color: rgb(0, 0, 0);
   margin: 0;
 }
 
@@ -58,7 +58,7 @@ input[type=text] {
 }
 
 ::-webkit-input-placeholder {
-  color: #999;
+  color: rgb(255, 255, 255);
 }
 
 :-ms-input-placeholder {
@@ -264,7 +264,7 @@ button {
 }
 
 .sub-title__bg {
-  background-color: #fcee21;
+  background-color: #755f8f;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -365,7 +365,7 @@ button {
 * header
 *****************/
 .header {
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   height: 60px;
 }
 
@@ -453,7 +453,7 @@ button {
 }
 
 .clear-message {
-  background-color: #f8f8f8;
+  background-color: #cabc37;
   padding: 30px 30px 60px;
   position: relative;
 }
@@ -462,7 +462,7 @@ button {
   position: relative;
   display: block;
   text-align: center;
-  color: #006837;
+  color: #ffffff;
   font-size: 30px;
   padding-bottom: 10px;
   margin-bottom: 35px;
