--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,3 +514,21 @@ button {
   display: none;
 }
 /*# sourceMappingURL=style.css.map */
+
+.youtube2 {
+  position: relative;
+  padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+  height: 0;
+  overflow: hidden;
+}
+
+.movie-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.story{
+  font-family: 'Courier New', Courier, monospace ;
+}
